tests/sksl/errors/Ossfuzz29444.glsl
### Compilation failed:

error: 2: invalid arguments to 'float[1]' constructor (expected 1 elements, but found 0)
error: 2: invalid arguments to 'float[1]' constructor (expected 1 elements, but found 0)
2 errors
